<resources>
    <string name="app_name">SCampus Events</string>

    <string name="parse_app_id">UkYs10S8r2u2Q9LRtpGq7ljWEeJRmG2fESmCtl1k</string>
    <string name="parse_client_key">mnxxyOuXHiNDHjwhQ3EmwQYPS5MB2Lqac8DpT8nP</string>

    <string name="login">Login</string>
    <string name="enter_username">Username/Email</string>
    <string name="username_only">Username</string>
    <string name="email_only">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="full_name">Full Name</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="service_not_available">The Location Service is offline.</string>
    <string name="invalid_lat_long_used">Incorrect Latitude/Longitude entered.</string>
    <string name="no_address_found">An address could not be determined</string>
    <string name="address_found">Address successfully determined</string>
    <string name="sample_description">SCampus Events serves as a central hub for students, faculty, staff, and anyone involved with the USC community who want to know what events are occurring on campus. Events that are not entirely on campus, but still are for USC affiliates, can also be viewed on the app. SCampus Events lets people who want to connect with other people they might not normally meet by connecting people from all corners of the USC campus.</string>
    <string name="event_title">Event Title</string>
    <string name="event_edit_title_hint">Enter Event Title Here</string>
    <string name="event_description">Event Description</string>
    <string name="event_edit_description_hint">Enter description here</string>
    <string name="current_location">Current Location</string>
    <string name="location_query_hint">Enter an address</string>
    <string name="search">Search</string>
    <string name="load_from_gallery">Load Photo from Gallery</string>
    <string name="create_event">Create Event</string>

    <string-array name="tab_names">
        <item>Details</item>
        <item>Location</item>
        <item>Photo</item>
    </string-array>
</resources>
