<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/horizontal_margin"
    android:paddingEnd="@dimen/horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/cardinal"
    android:gravity="center_horizontal">


    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/username"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_marginTop="73dp"
        android:hint="@string/username_only" />


    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:inputType="textPassword"
        android:hint="@string/password" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:inputType="textEmailAddress"
        android:id="@+id/email"
        android:hint="@string/email_only" />

    <Button
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/button_height"
        android:background="@color/gold"
        android:text="@string/sign_up"
        android:id="@+id/signup" />

</LinearLayout>
